--- a/pom.xml
+++ b/pom.xml
@@ -95,10 +95,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-messaging</artifactId>
-		</dependency>
+		</dependency> -->
 		
 		<!-- Swagger -->
 		<dependency>
