--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ server.port=${PORT:8080}
 
 server.error.include-message=always
 
+#logs
+logging.level.org.springdoc=DEBUG
+logging.level.web=DEBUG
+
